--- a/development.html
+++ b/development.html
@@ -35,8 +35,8 @@
 
     <div class="sidebar">
       <a href="#menu" class="mobile-menu-link">menu</a>
-        <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
-        <p class='nav title'>frontend web developer</p>
+        <h3 class='name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
+        <p class='title'>frontend web developer</p>
         <ul id="menu" class="nav-ul">
           <li><a class='nav' href="about.html">about</a></li>
           <br>
