--- a/resume.html
+++ b/resume.html
@@ -35,8 +35,8 @@
 
     <div class="sidebar">
       <a href="#menu" class="mobile-menu-link">menu</a>
-      <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
-      <p class='nav title'>frontend web developer</p>
+      <h3 class='name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
+      <p class='title'>frontend web developer</p>
       <ul id="menu" class="nav-ul">
         <li><a class='nav' href="about.html">about</a></li>
         <br>
@@ -68,17 +68,17 @@
         <h2 class='resume all-caps'>EXPERIENCE</h2>
         <div class='resume-shim'></div>
 
-        <h3>General Assembly / New York, NY</h3>
-        <h4>Web Development Immersive / April 2014&ndash;July 2014</h4>
-        <ul>
-          <li>completed a 12-week full-time development bootcamp that covers <br>a broad range of topics, all with an emphasis on agile methodology</li>
+        <h3 class="resume-header">General Assembly / New York, NY</h3>
+        <h4 class="resume-subheader">Web Development Immersive / April 2014&ndash;July 2014</h4>
+        <ul class="resume-ul">
+          <li>completed a 12-week full-time development bootcamp covering a broad range of topics, all with an emphasis on agile methodology</li>
         </ul>
 
         <div class='resume-shim'></div>
 
-        <h3>Art House Co-op / Brooklyn, NY</h3>
-        <h4>Curator/Manager, March 2011&ndash;April 2014</h4>
-        <ul>
+        <h3 class="resume-header">Art House Co-op / Brooklyn, NY</h3>
+        <h4 class="resume-subheader">Curator/Manager, March 2011&ndash;April 2014</h4>
+        <ul class="resume-ul">
           <li>helped run various interactive, crowdsourced art projects, primarily The Sketchbook Project, a traveling exhibition of books from around the world</li>
           <li>oversaw web store and social media content for The Brooklyn Art Library</li>
           <li>maintained and curated our collection of over 30,000 sketchbooks</li>
@@ -88,9 +88,9 @@
 
         <div class='resume-shim'></div>
 
-        <h3>T Salon / New York, NY</h3>
-        <h4>Graphic Designer, October 2009&ndash;March 2011</h4>
-        <ul>
+        <h3 class="resume-header">T Salon / New York, NY</h3>
+        <h4 class="resume-subheader">Graphic Designer, October 2009&ndash;March 2011</h4>
+        <ul class="resume-ul">
           <li>served as art director and marketing director for a boutique tea company</li>
           <li>led our brand management as we expanded from New York to Los Angeles</li>
           <li>designed catalogs, custom labels, and promotional material</li>
@@ -100,9 +100,9 @@
 
         <div class='resume-shim'></div>
 
-        <h3>The Madison Design Group / Bethesda, MD</h3>
-        <h4>Graphic Designer, October 2005&ndash;September 2009</h4>
-        <ul>
+        <h3 class="resume-header">The Madison Design Group / Bethesda, MD</h3>
+        <h4 class="resume-subheader">Graphic Designer, October 2005&ndash;September 2009</h4>
+        <ul class="resume-ul">
           <li>designed various materials for print and web such as identity systems, magazines, brochures, annual reports, invitations, e-newsletters and websites</li>
           <li>managed projects and oversaw production for corporate and non-profit clients</li>
         </ul>
@@ -115,7 +115,7 @@
         <h2 class='resume all-caps'>EDUCATION</h2>
         <div class='resume-shim'></div>
 
-        <h4>Virginia Tech | College of Architecture and Urban Studies | Blacksburg, VA</h4>
+        <h4 class="resume-subheader">Virginia Tech | College of Architecture and Urban Studies | Blacksburg, VA</h4>
         <p>BFA in Graphic Design, Minor in Communication | Graduated May 2005</p>
 
         <div class='resume-shim'></div>
