--- a/talks.html
+++ b/talks.html
@@ -35,8 +35,8 @@
 
     <div class="sidebar">
       <a href="#menu" class="mobile-menu-link">menu</a>
-      <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
-      <p class='nav title'>frontend web developer</p>
+      <h3 class='name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
+      <p class='title'>frontend web developer</p>
       <ul id="menu" class="nav-ul">
         <li><a class='nav' href="about.html">about</a></li>
         <br>
@@ -56,22 +56,13 @@
 
       <ul class="work-list">
         <li>
-          Decision Making
-          <a class='nav' href="images/presentations/ppn-decision.pdf" target="_blank" rel="noopener noreferrer">deck</a>
-          /
-          <a class='nav' href="decisions.html" target="_blank" rel="noopener noreferrer">notes</a>
+          Decision Making: <a href="images/presentations/ppn-decision.pdf" target="_blank" rel="noopener noreferrer">deck</a> / <a href="decisions.html" target="_blank" rel="noopener noreferrer">notes</a>
         </li>
         <li>
-          Carrie Nation
-          <a class='nav' href="images/presentations/ppn-prohibition.pdf" target="_blank" rel="noopener noreferrer">deck</a>
-          /
-          <a class='nav' href="carrie.html" target="_blank" rel="noopener noreferrer">notes</a>
+          Carrie Nation: <a href="images/presentations/ppn-prohibition.pdf" target="_blank" rel="noopener noreferrer">deck</a> / <a href="carrie.html" target="_blank" rel="noopener noreferrer">notes</a>
         </li>
         <li>
-          Moral Dilemmas
-          <a class='nav' href="images/presentations/ppn-dilemmas.pdf" target="_blank" rel="noopener noreferrer">deck</a>
-          /
-          <a class='nav' href="dilemmas.html" target="_blank" rel="noopener noreferrer">notes</a><br>
+          Moral Dilemmas: <a href="images/presentations/ppn-dilemmas.pdf" target="_blank" rel="noopener noreferrer">deck</a> / <a href="dilemmas.html" target="_blank" rel="noopener noreferrer">notes</a><br>
         </li>
       </ul>
 
