--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
 
     <div class="sidebar">
       <a href="#menu" class="mobile-menu-link">menu</a>
-      <h3 class='nav name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
-      <p class='nav title'>frontend web developer</p>
+      <h3 class='name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
+      <p class='title'>frontend web developer</p>
       <ul id="menu" class="nav-ul">
         <li><a class='nav' href="about.html">about</a></li>
-        <!-- <li><a class='nav work-temp' href="#">work</a>&nbsp;<span class='work-temp-fade'><span class='colorize'>coming soon</span></span></li> -->
         <br>
         <li><a class='nav' href='https://github.com/ChrisBup' target="_blank" rel="noopener noreferrer">GitHub</a></li>
         <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank" rel="noopener noreferrer">CodePen</a></li>
@@ -48,7 +47,6 @@
         <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank" rel="noopener noreferrer">Twitter</a></li>
         <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li>
         <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>email</a></li>
-        <!-- <li><a class='nav cv-temp' href="#">r&eacute;sume</a>&nbsp;<span class='cv-temp-fade'><span class='colorize'>coming soon</span></span></li> -->
       </ul>
     </div>
 
@@ -56,7 +54,7 @@
 
       <div id='intro'>
         <!-- <span class="close-intro">&times;</span> -->
-        <h3 class='highlight'>Hi, Chris here. I&#8217;m a web developer at <a href="https://www.radishlab.com" target="_blank" rel="noopener noreferrer">Radish Lab</a> in Bushwick, Brooklyn. I&#8217;m also an environmentalist, history nerd, runner, and fanny pack enthusiast. Here&#8217;s a list of my <a class='nav' href="favorite-things.html">favorite things</a>, some <a class='nav' href="talks.html">talks I&#8217;ve given</a>, and a few <a class='nav' href="side-projects.html">side projects</a>. Do <a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>say hello</a>.</h3>
+        <h3 class='highlight'>Hi, Chris here. I&#8217;m a web developer at <a href="https://www.radishlab.com" target="_blank" rel="noopener noreferrer">Radish Lab</a> in Bushwick, Brooklyn. I&#8217;m also an environmentalist, <a href="https://www.bushwickbrewingtour.com" target="_blank" rel="noopener noreferrer">history nerd</a>, <a href="https://www.chrisheuberger.com/rrbc" target="_blank" rel="noopener noreferrer">runner</a>, and fanny pack enthusiast. Here&#8217;s a list of my <a class='nav' href="favorite-things.html">favorite things</a>, some <a class='nav' href="talks.html">talks I&#8217;ve given</a>, and a few <a class='nav' href="side-projects.html">side projects</a>. Do <a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>say hello</a>.</h3>
       </div>
 
       <!-- hidden -->
@@ -92,6 +90,5 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="javascripts/vendor/jquery-1.11.0.min.js"><\/script>')</script>
   <script src="javascripts/scripts.js"></script>
-
 </body>
 </html>
