--- a/side-projects.html
+++ b/side-projects.html
@@ -55,8 +55,11 @@
       <h1 class="all-caps">SIDE PROJECTS</h1>
 
       <ul class="work-list">
-        <li><a href="https://www.bushwickbrewingtour.com" target="_blank" rel="noopener noreferrer">The Bushwick Brewing Tour</a></li>
+        <li>My beer history tour: <a href="https://www.bushwickbrewingtour.com" target="_blank" rel="noopener noreferrer">The Bushwick Brewing Tour</a></li>
         <li><a href="https://www.chrisheuberger.com/travel/" target="_blank" rel="noopener noreferrer">My travel site</a>, including a crazy long chronicle of an amazing <a href="https://www.chrisheuberger.com/peru/" target="_blank" rel="noopener noreferrer">trip to Peru</a>.</li>
+        <li>My political protest site: <a href="https://www.fightthestupid.com/" target="_blank" rel="noopener noreferrer">fightthestupid.com</a>.</li>
+        <li>A collection of desktop backgrounds I designed: <a href="https://www.pizzaisthebest.com/" target="_blank" rel="noopener noreferrer">pizzaisthebest.com</a>.</li>
+        <li>A list of recipes with ingredient checklists for easy grocery shopping: <a href="https://www.cookyhero.com/" target="_blank" rel="noopener noreferrer">cookyhero.com</a>.</li>
         <li>My wedding website: <a href="https://www.gtrainlovestory.com/" target="_blank" rel="noopener noreferrer">gtrainlovestory.com</a>.</li>
         <li>A photo journal through the years I started for my niece, <a href="https://julesferrin.com/" target="_blank" rel="noopener noreferrer">Jules</a> and one for her sister, <a href="https://gretaferrin.com/" target="_blank" rel="noopener noreferrer">Greta</a>.</li>
       </ul>
