--- a/index.html
+++ b/index.html
@@ -34,27 +34,33 @@
   <div class="page-container">
 
     <div class="sidebar">
-      <a href="#menu" class="mobile-menu-link">menu</a>
-      <h3 class='name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
-      <p class='title'>frontend web developer</p>
-      <ul id="menu" class="nav-ul">
-        <li><a class='nav' href="about.html">about</a></li>
-        <br>
-        <li><a class='nav' href='https://github.com/ChrisBup' target="_blank" rel="noopener noreferrer">GitHub</a></li>
-        <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank" rel="noopener noreferrer">CodePen</a></li>
-        <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank" rel="noopener noreferrer">Dribbble</a></li>
-        <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-        <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank" rel="noopener noreferrer">Twitter</a></li>
-        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li>
-        <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>email</a></li>
-      </ul>
+      <div class="sidebar-content">
+        <a href="#menu" class="mobile-menu-link">
+          <span class="bar"></span><span class="bar"></span>
+        </a>
+        <h3 class="name"><a class="nav" href="index.html">Chris Heuberger</a></h3>
+        <p class="title">frontend web developer</p>
+        <nav>
+          <ul id="menu" class="nav-ul">
+            <li><a class="nav" href="about.html">About</a></li>
+            <li><a class="nav" href="work.html">Work</a></li>
+            <br>
+            <li><a class="nav" href="https://github.com/ChrisBup" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+            <li><a class="nav" href="https://codepen.io/ChrisBup" target="_blank" rel="noopener noreferrer">CodePen</a></li>
+            <li><a class="nav" href="https://dribbble.com/chrisbup" target="_blank" rel="noopener noreferrer">Dribbble</a></li>
+            <li><a class="nav" href="https://www.linkedin.com/in/chrisheuberger/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+            <li><a class="nav" href="https://twitter.com/chrisbup" target="_blank" rel="noopener noreferrer">Twitter</a></li>
+            <li><a class="nav" href="https://instagram.com/chrisbup" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+            <li><a class="nav" href="mailto:chrisheuberg@gmail.com" target="_blank" rel="noopener noreferrer" title="chrisheuberg@gmail.com">email</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
 
-    <div id="homepage-main-content" class="main-content">
+    <div class="main-content main-content_home">
 
-      <div id='intro'>
-        <!-- <span class="close-intro">&times;</span> -->
-        <h3 class='highlight'>Hi, Chris here. I&#8217;m a web developer at <a href="https://www.radishlab.com" target="_blank" rel="noopener noreferrer">Radish Lab</a> in Bushwick, Brooklyn. I&#8217;m also an environmentalist, <a href="https://www.bushwickbrewingtour.com" target="_blank" rel="noopener noreferrer">history nerd</a>, <a href="https://www.chrisheuberger.com/rrbc" target="_blank" rel="noopener noreferrer">runner</a>, and fanny pack enthusiast. Here&#8217;s a list of my <a class='nav' href="favorite-things.html">favorite things</a>, some <a class='nav' href="talks.html">talks I&#8217;ve given</a>, and a few <a class='nav' href="side-projects.html">side projects</a>. Do <a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>say hello</a>.</h3>
+      <div class='home-intro'>  
+        <h3 class='highlight'>Hi, Chris here. I&#8217;m a web developer at <a href="https://www.radishlab.com" target="_blank" rel="noopener noreferrer">Radish Lab</a> in Bushwick, Brooklyn. I&#8217;m also an environmentalist, <a href="https://www.bushwickbrewingtour.com" target="_blank" rel="noopener noreferrer">history nerd</a>, <a href="https://www.chrisheuberger.com/rrbc" target="_blank" rel="noopener noreferrer">runner</a>, and fanny pack enthusiast. Here&#8217;s a list of my <a href="favorite-things.html">favorite things</a>, some <a href="talks.html">talks I&#8217;ve given</a>, and a few <a href="side-projects.html">side projects</a>. Do <a href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>say hello</a>.</h3>
       </div>
 
       <!-- hidden -->
