--- a/about.html
+++ b/about.html
@@ -34,32 +34,43 @@
   <div class="page-container">
 
     <div class="sidebar">
-      <a href="#menu" class="mobile-menu-link">menu</a>
-      <h3 class='name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
-      <p class='title'>frontend web developer</p>
-      <ul id="menu" class="nav-ul">
-        <li><a class='nav current' href="about.html">about</a></li>
-        <br>
-        <li><a class='nav' href='https://github.com/ChrisBup' target="_blank" rel="noopener noreferrer">GitHub</a></li>
-        <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank" rel="noopener noreferrer">CodePen</a></li>
-        <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank" rel="noopener noreferrer">Dribbble</a></li>
-        <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-        <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank" rel="noopener noreferrer">Twitter</a></li>
-        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li>
-        <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>email</a></li>
-      </ul>
+      <div class="sidebar-content">
+        <a href="#menu" class="mobile-menu-link">
+          <span class="bar"></span><span class="bar"></span>
+        </a>
+        <h3 class="name"><a class="nav" href="index.html">Chris Heuberger</a></h3>
+        <p class="title">frontend web developer</p>
+        <nav>
+          <ul id="menu" class="nav-ul">
+            <li><a class="nav current" href="about.html">About</a></li>
+            <li><a class="nav" href="work.html">Work</a></li>
+            <br>
+            <li><a class="nav" href="https://github.com/ChrisBup" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+            <li><a class="nav" href="https://codepen.io/ChrisBup" target="_blank" rel="noopener noreferrer">CodePen</a></li>
+            <li><a class="nav" href="https://dribbble.com/chrisbup" target="_blank" rel="noopener noreferrer">Dribbble</a></li>
+            <li><a class="nav" href="https://www.linkedin.com/in/chrisheuberger/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+            <li><a class="nav" href="https://twitter.com/chrisbup" target="_blank" rel="noopener noreferrer">Twitter</a></li>
+            <li><a class="nav" href="https://instagram.com/chrisbup" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+            <li><a class="nav" href="mailto:chrisheuberg@gmail.com" target="_blank" rel="noopener noreferrer" title="chrisheuberg@gmail.com">email</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
 
-    <div class="main-content about-content">
+    <div class="main-content main-content_about">
 
-      <div class='about-body'>
-        <h1 class='about all-caps'>ABOUT</h1><br>
-        <img class='about-img' src="images/ch-self-sq.png">
-        <p>I’m a full stack web developer, though I focus more on frontend. I’m into social impact projects, data visualization, typography, and all forms of design as well as science, math, art, and pretty much every other subject. I like listening to podcasts, playing pick-up soccer, organizing everything, making lists, cooking mediterranean, and petting any dog I meet. My last name is pronounced <em>HI-ber-ger</em> but I'm not a stickler.</p>
+      <div class='about-intro'>
+        <h1 class='all-caps'>ABOUT</h1><br>
+        <div class="about-bio">
+          <div class='about-img'>
+            <img src="images/ch-self-sq.png">
+          </div>
+          <p>I’m a full stack web developer, though I focus more on frontend. I’m into social impact projects, data visualization, typography, and all forms of design as well as science, math, art, and pretty much every other subject. I like listening to podcasts, playing pick-up soccer, organizing everything, making lists, cooking mediterranean, and petting any dog I meet. My last name is pronounced <em>HI-ber-ger</em> but I'm not a stickler.</p>
+        </div>
       </div>
 
       <div class='about-list'>
-        <div class='short'>
+        <div class='short-list'>
           <h2 class='short-title all-caps'>The Short List</h2>
           <ul>
             <li>political issue: campaign finance reform</li>
