--- a/photo.html
+++ b/photo.html
@@ -34,20 +34,27 @@
   <div class="page-container">
 
     <div class="sidebar">
-      <a href="#menu" class="mobile-menu-link">menu</a>
-      <h3 class='name'><a class='nav' href="index.html">Chris Heuberger</a></h3>
-      <p class='title'>frontend web developer</p>
-      <ul id="menu" class="nav-ul">
-        <li><a class='nav' href="about.html">about</a></li>
-        <br>
-        <li><a class='nav' href='https://github.com/ChrisBup' target="_blank" rel="noopener noreferrer">GitHub</a></li>
-        <li><a class='nav' href='https://codepen.io/ChrisBup' target="_blank" rel="noopener noreferrer">CodePen</a></li>
-        <li><a class='nav' href='https://dribbble.com/chrisbup' target="_blank" rel="noopener noreferrer">Dribbble</a></li>
-        <li><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/' target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-        <li><a class='nav' href='https://twitter.com/chrisbup' target="_blank" rel="noopener noreferrer">Twitter</a></li>
-        <li><a class='nav' href='https://instagram.com/chrisbup' target="_blank" rel="noopener noreferrer">Instagram</a></li>
-        <li><a class='nav' href='mailto:chrisheuberg@gmail.com' target="_blank" rel="noopener noreferrer" title='chrisheuberg@gmail.com'>email</a></li>
-      </ul>
+      <div class="sidebar-content">
+        <a href="#menu" class="mobile-menu-link">
+          <span class="bar"></span><span class="bar"></span>
+        </a>
+        <h3 class="name"><a class="nav" href="index.html">Chris Heuberger</a></h3>
+        <p class="title">frontend web developer</p>
+        <nav>
+          <ul id="menu" class="nav-ul">
+            <li><a class="nav" href="about.html">About</a></li>
+            <li><a class="nav" href="work.html">Work</a></li>
+            <br>
+            <li><a class="nav" href="https://github.com/ChrisBup" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+            <li><a class="nav" href="https://codepen.io/ChrisBup" target="_blank" rel="noopener noreferrer">CodePen</a></li>
+            <li><a class="nav" href="https://dribbble.com/chrisbup" target="_blank" rel="noopener noreferrer">Dribbble</a></li>
+            <li><a class="nav" href="https://www.linkedin.com/in/chrisheuberger/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+            <li><a class="nav" href="https://twitter.com/chrisbup" target="_blank" rel="noopener noreferrer">Twitter</a></li>
+            <li><a class="nav" href="https://instagram.com/chrisbup" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+            <li><a class="nav" href="mailto:chrisheuberg@gmail.com" target="_blank" rel="noopener noreferrer" title="chrisheuberg@gmail.com">email</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
 
     <div class="main-content">
