--- a/work.html
+++ b/work.html
@@ -19,7 +19,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="HandheldFriendly" content="true">
   <meta name="description" content="The portfolio website of Chris Heuberger - developer / designer / organizer - Brooklyn, NY">
-  <title>Chris Heuberger / development</title>
+  <title>Chris Heuberger / work</title>
   <link rel="stylesheet" href="stylesheets/normalize.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i" rel="stylesheet">
@@ -43,7 +43,7 @@
         <nav>
           <ul id="menu" class="nav-ul">
             <li><a class="nav" href="about.html">About</a></li>
-            <li><a class="nav" href="work.html">Work</a></li>
+            <li><a class="nav current" href="work.html">Work</a></li>
             <br>
             <li><a class="nav" href="https://github.com/ChrisBup" target="_blank" rel="noopener noreferrer">GitHub</a></li>
             <li><a class="nav" href="https://codepen.io/ChrisBup" target="_blank" rel="noopener noreferrer">CodePen</a></li>
@@ -57,39 +57,14 @@
       </div>
     </div>
 
-    <div class="main-content">
+    <div class="main-content about-content">
 
-      <h1 class="all-caps">DEVELOPMENT</h1><br>
-      <div class='caption'>
-        <h3 class="all-caps">CURATOR</h3>
-        <p>Curator allows you to search the entire Brooklyn Museum collection, see information about each piece, and curate your own gallery to help plan your visit. It uses Rails 4, PostgreSQL, and The Brooklyn Museum API.</p>
-      </div>
-      <div class='screenshot'>
-        <a href="https://curator-app.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/curator1.png"></a>
-        <a href="https://curator-app.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/curator2.png"></a>
-        <a href="https://curator-app.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/curator3.png"></a>
-      </div>
-      <br><hr><br>
-      <div class='caption'>
-        <h3 class="all-caps">VALENCE</h3>
-        <p>Valence is a tool for creating and organizing music playlists and viewing dynamic, animated data visualizations based on song traits like energy, danceability and of course, valence. It uses Rails 4, PostgreSQL, D3, the EchoNest API and the iTunes API.</p>
-      </div>
-      <div class='screenshot'>
-        <a href="https://valence.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/valence1.png"></a>
-        <a href="https://valence.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/valence2.png"></a>
-        <a href="https://valence.herokuapp.com/" target="_blank" rel="noopener noreferrer"><img src="images/development/valence3.png"></a>
-      </div>
+      <h1 class='all-caps'>WORK</h1><br>
+      <p>Coming in 2019.</p>
 
       <footer>
         <p>
-          <small>
-              <span class='license'>
-                All work is licensed under a
-                <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
-                  Creative Commons Attribution 4.0 International License.
-                </a>
-              </span><br>
-            Thanks for reading. Have a <a class='quote'>nice day.</a>
+          <small>Thanks for reading. Have a <a class='quote'>nice day.</a>
             <span class='fade'>
               &nbsp;&mdash;&nbsp;
               <span class='colorize'>"The details are not the details. They make the design." -Charles Eames</span>
