--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
             <li>embarassing secret: I own three fanny packs.</li>
             <li>fascination: behavioral economics</li>
             <li>hidden talent: I can recite Hamlet's big soliloquy.</li>
-            <li>odd habit: I keep diligent lists of good catch phrases, band names, conversation topics, fun facts, and inpirational quotes.</li>
+            <li>odd habit: I keep diligent lists of good vocab words, names, conversation topics, fun facts, and project ideas.</li>
             <li>favorite hobby: exploring a new city</li>
           </ul>
         </div>
