--- a/favorite-things.html
+++ b/favorite-things.html
@@ -194,7 +194,7 @@
           <small>Thanks for reading. Have a <a class='quote'>nice day.</a>
             <span class='fade'>
               &nbsp;&mdash;&nbsp;
-              <span class='colorize'>"The details are not the details. They make the design." -Charles Eames</span>
+              <span class='colorize'>"The details are not the details. They make the design." &mdash;Charles Eames</span>
             </span>
           </small>
         </p><br>
