--- a/favorite-things.html
+++ b/favorite-things.html
@@ -39,7 +39,7 @@
           <span class="bar"></span><span class="bar"></span>
         </a>
         <h3 class="name"><a class="nav" href="index.html">Chris Heuberger</a></h3>
-        <p class="title">frontend web developer</p>
+        <p class="title">front-end web developer</p>
         <nav>
           <ul id="menu" class="nav-ul">
             <li><a class="nav" href="about.html">About</a></li>
