--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
           <div class='about-img'>
             <img src="images/ch-self-sq.png">
           </div>
-          <p>I’m a full stack web developer, though I focus more on the front end. I’m into social impact projects, data visualization, typography, and all forms of design as well as science, math, art, and pretty much every other subject. I like listening to podcasts, playing pick-up soccer, organizing everything, making lists, cooking mediterranean, and petting any dog I meet. My last name is pronounced <em>HI-ber-ger</em> but I'm not a stickler.</p>
+          <p>I’m a full stack web developer, though I focus more on the front end. I’m into social impact projects, data visualization, typography, and all forms of design as well as science, math, art, and pretty much every other subject. I like listening to podcasts, running, organizing everything, making lists, cooking mediterranean, and petting any dog I meet. My last name is pronounced <em>HI-ber-ger</em> but I'm not a stickler.</p>
         </div>
       </div>
 
