--- a/about.html
+++ b/about.html
@@ -20,10 +20,11 @@
   <meta name="HandheldFriendly" content="true">
   <meta name="description" content="The portfolio website of Chris Heuberger - developer / designer / organizer - Brooklyn, NY">
   <title>Chris Heuberger / about</title>
-  <link rel="stylesheet" href="stylesheets/normalize.min.css">
-  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+  <link href="stylesheets/normalize.min.css" rel="stylesheet">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i" rel="stylesheet">
-  <link rel="stylesheet" href="stylesheets/styles.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" rel=stylesheet type="text/css">
+  <link href="stylesheets/styles.css" rel="stylesheet">
   <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 <body>
@@ -35,9 +36,6 @@
 
     <div class="sidebar">
       <div class="sidebar-content">
-        <a href="#menu" class="mobile-menu-link">
-          <span class="bar"></span><span class="bar"></span>
-        </a>
         <h3 class="name"><a class="nav-link" href="index.html">Chris Heuberger</a></h3>
         <nav>
           <ul id="menu" class="nav-ul">
@@ -56,13 +54,39 @@
       </div>
     </div>
 
+    <div class="mobile-menu-group">
+      <div class="menu-tab">
+        <p class="open-mobile-menu"><span class="hi">Hi</span><span class="berger"><span class="berger-bar"></span><span class="berger-bar"></span><span class="berger-bar"></span></span></p>
+        <p class="close-mobile-menu">close</p>
+      </div>
+      <nav class="mobile-menu">
+        <ul>
+          <li><a class="nav-link" href="about.html">About</a></li>
+          <li><a class="nav-link" href="work.html">Work</a></li>
+          <li class="mobile-social">
+            <div class="icons1">
+              <span><a class="nav-link" href="https://github.com/ChrisBup" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a></span>
+              <span><a class="nav-link" href="https://codepen.io/ChrisBup" target="_blank" rel="noopener noreferrer"><i class="fab fa-codepen"></i></a></span>
+              <span><a class="nav-link" href="https://dribbble.com/chrisbup" target="_blank" rel="noopener noreferrer"><i class="fab fa-dribbble"></i></a></span>
+              <span><a class="nav-link" href="https://www.linkedin.com/in/chrisheuberger/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a></span>
+            </div>
+            <div class="icons2">
+              <span><a class="nav-link" href="https://twitter.com/chrisbup" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a></span>
+              <span><a class="nav-link" href="https://instagram.com/chrisbup" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a></span>
+              <span><a class="nav-link" href="mailto:chrisheuberg@gmail.com" target="_blank" rel="noopener noreferrer" title="chrisheuberg@gmail.com"><i class="far fa-envelope"></i></a></span>
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="main-content main-content_about">
 
       <div class='about-intro'>
         <h1 class='all-caps'>ABOUT</h1><br>
         <div class="about-bio">
           <div class='about-img'>
-            <img src="images/ch-self-sq.png">
+            <img src="images/chrisheuberger-grayscale-3.jpeg">
           </div>
           <p>I’m a full stack web developer, though I focus more on the front end. I’m into social impact projects, data visualization, typography, and all forms of design as well as science, math, art, and pretty much every other subject. I like listening to podcasts, running, organizing everything, deeply analyzing works of art, film, or comedy for allegory, metaphors, and hidden themes, making lists, cooking mediterranean, and petting any dog I meet. My last name is pronounced <em>HI-ber-ger</em> but I'm not a stickler.</p>
         </div>
