--- a/resume.html
+++ b/resume.html
@@ -20,10 +20,11 @@
   <meta name="HandheldFriendly" content="true">
   <meta name="description" content="The portfolio website of Chris Heuberger - developer / designer / organizer - Brooklyn, NY">
   <title>Chris Heuberger / r&eacute;sume</title>
-  <link rel="stylesheet" href="stylesheets/normalize.min.css">
-  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+  <link href="stylesheets/normalize.min.css" rel="stylesheet">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i" rel="stylesheet">
-  <link rel="stylesheet" href="stylesheets/styles.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" rel=stylesheet type="text/css">
+  <link href="stylesheets/styles.css" rel="stylesheet">
   <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 <body>
@@ -54,6 +55,32 @@
           </ul>
         </nav>
       </div>
+    </div>
+
+    <div class="mobile-menu-group">
+      <div class="menu-tab">
+        <p class="open-mobile-menu"><span class="hi">Hi</span><span class="berger"><span class="berger-bar"></span><span class="berger-bar"></span><span class="berger-bar"></span></span></p>
+        <p class="close-mobile-menu">close</p>
+      </div>
+      <nav class="mobile-menu">
+        <ul>
+          <li><a class="nav-link" href="about.html">About</a></li>
+          <li><a class="nav-link" href="work.html">Work</a></li>
+          <li class="mobile-social">
+            <div class="icons1">
+              <span><a class="nav-link" href="https://github.com/ChrisBup" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a></span>
+              <span><a class="nav-link" href="https://codepen.io/ChrisBup" target="_blank" rel="noopener noreferrer"><i class="fab fa-codepen"></i></a></span>
+              <span><a class="nav-link" href="https://dribbble.com/chrisbup" target="_blank" rel="noopener noreferrer"><i class="fab fa-dribbble"></i></a></span>
+              <span><a class="nav-link" href="https://www.linkedin.com/in/chrisheuberger/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a></span>
+            </div>
+            <div class="icons2">
+              <span><a class="nav-link" href="https://twitter.com/chrisbup" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a></span>
+              <span><a class="nav-link" href="https://instagram.com/chrisbup" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a></span>
+              <span><a class="nav-link" href="mailto:chrisheuberg@gmail.com" target="_blank" rel="noopener noreferrer" title="chrisheuberg@gmail.com"><i class="far fa-envelope"></i></a></span>
+            </div>
+          </li>
+        </ul>
+      </nav>
     </div>
 
     <div class="main-content">
