--- a/side-projects.html
+++ b/side-projects.html
@@ -20,10 +20,11 @@
   <meta name="HandheldFriendly" content="true">
   <meta name="description" content="The portfolio website of Chris Heuberger - developer / designer / organizer - Brooklyn, NY">
   <title>Chris Heuberger / side projects</title>
-  <link rel="stylesheet" href="stylesheets/normalize.min.css">
-  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+  <link href="stylesheets/normalize.min.css" rel="stylesheet">
+  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,600,600i" rel="stylesheet">
-  <link rel="stylesheet" href="stylesheets/styles.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" rel=stylesheet type="text/css">
+  <link href="stylesheets/styles.css" rel="stylesheet">
   <script src="javascripts/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 </head>
 <body>
@@ -56,6 +57,32 @@
       </div>
     </div>
 
+    <div class="mobile-menu-group">
+      <div class="menu-tab">
+        <p class="open-mobile-menu"><span class="hi">Hi</span><span class="berger"><span class="berger-bar"></span><span class="berger-bar"></span><span class="berger-bar"></span></span></p>
+        <p class="close-mobile-menu">close</p>
+      </div>
+      <nav class="mobile-menu">
+        <ul>
+          <li><a class="nav-link" href="about.html">About</a></li>
+          <li><a class="nav-link" href="work.html">Work</a></li>
+          <li class="mobile-social">
+            <div class="icons1">
+              <span><a class="nav-link" href="https://github.com/ChrisBup" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a></span>
+              <span><a class="nav-link" href="https://codepen.io/ChrisBup" target="_blank" rel="noopener noreferrer"><i class="fab fa-codepen"></i></a></span>
+              <span><a class="nav-link" href="https://dribbble.com/chrisbup" target="_blank" rel="noopener noreferrer"><i class="fab fa-dribbble"></i></a></span>
+              <span><a class="nav-link" href="https://www.linkedin.com/in/chrisheuberger/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a></span>
+            </div>
+            <div class="icons2">
+              <span><a class="nav-link" href="https://twitter.com/chrisbup" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a></span>
+              <span><a class="nav-link" href="https://instagram.com/chrisbup" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a></span>
+              <span><a class="nav-link" href="mailto:chrisheuberg@gmail.com" target="_blank" rel="noopener noreferrer" title="chrisheuberg@gmail.com"><i class="far fa-envelope"></i></a></span>
+            </div>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="main-content">
 
       <h1 class="all-caps">SIDE PROJECTS</h1>
@@ -67,19 +94,13 @@
         <li>A collection of desktop backgrounds I designed: <a href="https://www.pizzaisthebest.com/" target="_blank" rel="noopener noreferrer">pizzaisthebest.com</a>.</li>
         <li>A list of recipes with ingredient checklists for easy grocery shopping: <a href="https://www.cookyhero.com/" target="_blank" rel="noopener noreferrer">cookyhero.com</a>.</li>
         <li>My wedding website: <a href="https://www.gtrainlovestory.com/" target="_blank" rel="noopener noreferrer">gtrainlovestory.com</a>.</li>
+        <li>My wife, the art art histrian and curator<a href="https://www.jillianelliottrusso.com" target="_blank" rel="noopener noreferrer">Jillian Russo</a>.</li>
         <li>A photo journal through the years I started for my niece, <a href="https://julesferrin.com/" target="_blank" rel="noopener noreferrer">Jules</a> and one for her sister, <a href="https://gretaferrin.com/" target="_blank" rel="noopener noreferrer">Greta</a>.</li>
       </ul>
 
       <footer>
         <p>
-          <small>
-            <span class='license'>
-              All work is licensed under a
-              <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
-                Creative Commons Attribution 4.0 International License.
-              </a>
-            </span><br>
-            Thanks for reading. Have a <a class='quote'>nice day.</a>
+          <small>Thanks for reading. Have a <a class='quote'>nice day.</a>
             <span class='fade'>
               &nbsp;&mdash;&nbsp;
               <span class='colorize'>"The details are not the details. They make the design." &mdash;Charles Eames</span>
