fix historian typo

--- a/side-projects.html
+++ b/side-projects.html
@@ -91,7 +91,7 @@
         <li>A collection of desktop backgrounds I designed: <a href="https://www.pizzaisthebest.com/" target="_blank" rel="noopener noreferrer">pizzaisthebest.com</a>.</li>
         <li>A list of recipes with ingredient checklists for easy grocery shopping: <a href="https://www.cookyhero.com/" target="_blank" rel="noopener noreferrer">cookyhero.com</a>.</li>
         <li>My wedding website: <a href="https://www.gtrainlovestory.com/" target="_blank" rel="noopener noreferrer">gtrainlovestory.com</a>.</li>
-        <li>Website for my wife, <a href="https://www.jillianelliottrusso.com" target="_blank" rel="noopener noreferrer">Jillian Russo</a>, an art art histrian and curator.</li>
+        <li>Website for my wife, <a href="https://www.jillianelliottrusso.com" target="_blank" rel="noopener noreferrer">Jillian Russo</a>, an art art historian and curator.</li>
         <li>A photo journal through the years I started for my niece, <a href="https://julesferrin.com/" target="_blank" rel="noopener noreferrer">Jules</a> and one for her sister, <a href="https://gretaferrin.com/" target="_blank" rel="noopener noreferrer">Greta</a>.</li>
       </ul>
 
